--- a/Web/Restaurant.Web/Views/Shared/_Layout.cshtml
+++ b/Web/Restaurant.Web/Views/Shared/_Layout.cshtml
@@ -54,7 +54,7 @@
                     <a class="nav-item nav-link" asp-area="" asp-controller="Reservation" asp-action="Book">Book a table</a>
                     <partial name="_LoginPartial" />
                 </div>
-                <a class="btn btn-primary py-2 px-4" asp-controller="Cart" asp-action="Index"><i class="fa-solid fa-cart-shopping"></i> Your cart</a>
+                <vc:cart-total></vc:cart-total>
             </div>
 
         </nav>
@@ -138,7 +138,7 @@
     <script src="~/lib/waypoints/waypoints.min.js" asp-append-version="true"></script>
     <script src="~/lib/counterup/counterup.min.js" asp-append-version="true"></script>
     <script src="~/lib/owlcarousel/owl.carousel.min.js" asp-append-version="true"></script>
-    <script src="https://kit.fontawesome.com/1405e59552.js" asp-append-version="true" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/1405e59552.js" asp-append-version="true" crossorigin="anonymous" data-auto-replace-svg="nest"></script>
 
 
 
