Finished cart functionality
Added remove item from cart with AJAX and JS, added custom validation for meal id in input model, changed CartItemQuantityValidationAttribute logic to be applied to specific actions.

--- a/Web/Restaurant.Web/Views/Menu/AllMeals.cshtml
+++ b/Web/Restaurant.Web/Views/Menu/AllMeals.cshtml
@@ -149,7 +149,7 @@
                     $("#exampleModal").modal('show');
 
                     var currentCartTotalPrice = JSON.parse(xhr.responseText);
-                    $("#cartTotal").html('<i class="fa-solid fa-cart-shopping"></i> ' + currentCartTotalPrice + ' <i class="fas fa-dollar-sign"></i>');
+                    $("#cartSubTotalBtn").html('<i class="fa-solid fa-cart-shopping"></i> ' + currentCartTotalPrice + ' <i class="fas fa-dollar-sign"></i>');
                 }
             },
             error: function (xhr) {
