--- a/Web/Restaurant.Web/Views/Cart/Index.cshtml
+++ b/Web/Restaurant.Web/Views/Cart/Index.cshtml
@@ -30,7 +30,7 @@
 
                                 @cartItem.Meal.Name
                             </td>
-                            <td class="align-middle">@cartItem.Meal.Price $</td>
+                            <td class="align-middle" id="cartItemMealPrice@(cartItem.Meal.Id)">@cartItem.Meal.Price $</td>
                             <td class="align-middle">
                                 <div class="input-group quantity mx-auto" style="width: 100px;">
                                     <div class="input-group-btn">
@@ -46,8 +46,8 @@
                                     </div>
                                 </div>
                             </td>
-                            <td class="align-middle">@cartItem.ItemTotalPrice $</td>
-                            <td class="align-middle"><button class="btn btn-sm btn-primary"><i class="fa fa-times"></i></button></td>
+                            <td class="align-middle" id="cartItemTotalPrice@(cartItem.Meal.Id)">@cartItem.ItemTotalPrice $</td>
+                            <td class="align-middle"><button class="btn btn-sm btn-primary" onclick="RemoveFromCart('cartItemContainer@(cartItem.Meal.Id)')"><i class="fa fa-times"></i></button></td>
                         </tr>
                     }
                 </tbody>
@@ -61,7 +61,7 @@
                 <div class="card-body">
                     <div class="d-flex justify-content-between mb-3 pt-1">
                         <h6 class="font-weight-medium">Subtotal</h6>
-                        <h6 class="font-weight-medium">@Model.SubTotal $</h6>
+                        <h6 class="font-weight-medium" id="cartSubTotalCard">@Model.SubTotal $</h6>
                     </div>
                     <div class="d-flex justify-content-between">
                         <h6 class="font-weight-medium">Shipping</h6>
@@ -71,7 +71,7 @@
                 <div class="card-footer border-secondary bg-transparent">
                     <div class="d-flex justify-content-between mt-2">
                         <h5 class="font-weight-bold">Total</h5>
-                        <h5 class="font-weight-bold">@Model.TotalPrice $</h5>
+                        <h5 class="font-weight-bold" id="cartTotalPrice">@Model.TotalPrice $</h5>
                     </div>
                     <a class="btn btn-block btn-primary mt-md-3 ms-md-3 p-md-3 text-md-center" asp-controller="Checkout" asp-action="Index">Proceed To Checkout</a>
                 </div>
@@ -98,11 +98,8 @@
 
         }
         else {
-            if (quantity > 1) {
-                quantity--;
-            }
+            quantity--;
         }
-        console.log(mealId, quantity);
 
         const data =
         {
@@ -117,25 +114,48 @@
             contentType: 'application/json',
             success: function (result, status, xhr) {
                 if (xhr.status === 200) {
-
-                    var result = JSON.parse(xhr.responseText);
+                    var jsonResult = JSON.parse(xhr.responseText);
+                    cartItemContainer.querySelector('input').setAttribute('value', jsonResult.quantity);
+                    $("#cartSubTotalBtn").html('<i class="fa-solid fa-cart-shopping"></i> ' + jsonResult.cartSubTotal + ' <i class="fas fa-dollar-sign"></i>');
+                    $("#cartSubTotalCard").html(jsonResult.cartSubTotal + ' <i class="fas fa-dollar-sign"></i>');
+                    $("#cartItemTotalPrice" + mealId).html(jsonResult.itemTotalPrice + ' <i class="fas fa-dollar-sign"></i>');
+                    $("#cartTotalPrice").html(jsonResult.cartTotalPrice + ' <i class="fas fa-dollar-sign"></i>');
                 }
             }
         });
+    }
 
-        //var button = event.srcElement;
+    function RemoveFromCart(id) {
 
-        //if (button.classList.contains('btn-plus')) {
+        var mealId = id.substring(17);
 
-        //    quantityValue++;
+        const data =
+        {
+            mealId: mealId,
+        };
 
-        //}
-        //else {
-        //    if (quantityValue > 1) {
-        //        quantityValue--;
-        //    }
-        //}
+        $.ajax({
+            url: '/Cart/RemoveFromCart',
+            type: 'POST',
+            data: JSON.stringify(data),
+            contentType: 'application/json',
+            success: function (result, status, xhr) {
+                if (xhr.status === 200) {
+                    var itemPrice = Number.parseFloat($("#cartItemTotalPrice" + mealId).text());
 
-        //quantity.setAttribute('value', quantityValue);
+
+                    var cartSubTotalBtn = Number.parseFloat($("#cartSubTotalBtn").text());
+                    console.log(cartSubTotalBtn);
+                    var cartSubTotalCard = Number.parseFloat($("#cartSubTotalCard").text());
+                    var cartTotal = Number.parseFloat($("#cartTotalPrice").text());
+
+
+                    $("#cartSubTotalBtn").html('<i class="fa-solid fa-cart-shopping"></i> ' + (cartSubTotalBtn - itemPrice).toFixed(2) + ' <i class="fas fa-dollar-sign"></i>');
+                    $("#cartSubTotalCard").html((cartSubTotalCard - itemPrice).toFixed(2) + ' <i class="fas fa-dollar-sign"></i>');
+                    $("#cartTotalPrice").html((cartTotal - itemPrice).toFixed(2) + ' <i class="fas fa-dollar-sign"></i>');
+                    $("#" + id).remove();
+                }
+            }
+        });
     }
 </script>
