--- a/Web/Restaurant.Web/Views/Shared/Components/CartTotal/Default.cshtml
+++ b/Web/Restaurant.Web/Views/Shared/Components/CartTotal/Default.cshtml
@@ -1,6 +1,6 @@
 ﻿@if (this.User.Identity.IsAuthenticated)
 {
-    <a class="btn btn-primary py-2 px-4" id="cartTotal" asp-controller="Cart" asp-action="Index"><i class="fa-solid fa-cart-shopping"></i> @ViewBag.CartPrice <i class="fas fa-dollar-sign"></i></a>
+    <a class="btn btn-primary py-2 px-4" id="cartSubTotalBtn" asp-area="" asp-controller="Cart" asp-action="Index"><i class="fa-solid fa-cart-shopping"></i> @ViewBag.CartPrice <i class="fas fa-dollar-sign"></i></a>
 }
 else
 {
