Added Checkout functionality, started working on orders.
Added Checkout controller and view, dynamic order address selection.

--- a/Web/Restaurant.Web/Views/Address/AllAddresses.cshtml
+++ b/Web/Restaurant.Web/Views/Address/AllAddresses.cshtml
@@ -6,7 +6,7 @@
 }
 
 <partial name="_HeroPartial" />
-<div class="bg-white">
+<div class="bg-white wow fadeInUp" data-wow-delay="0.1s">
 
     <hr style="color: black; height:3px; opacity:100; margin-bottom:30px;" />
     <div class="row g-3">
