--- a/Web/Restaurant.Web/Views/Cart/Index.cshtml
+++ b/Web/Restaurant.Web/Views/Cart/Index.cshtml
@@ -8,7 +8,7 @@
 <partial name="_HeroPartial" />
 
 <!-- Cart Start -->
-<div class="container-fluid pt-5">
+<div class="container-fluid pt-5 wow fadeInUp" data-wow-delay="0.1s">
     <div class="row">
         <div class="col-lg-8 table-responsive mb-5">
             <table class="table table-bordered text-center mb-0">
