--- a/Web/Restaurant.Web/Views/Review/AddReview.cshtml
+++ b/Web/Restaurant.Web/Views/Review/AddReview.cshtml
@@ -8,8 +8,8 @@
 
 <partial name="_HeroPartial" />
 
-<div class="col-md-12 bg-dark">
-    <div class="p-5 wow fadeInUp" data-wow-delay="0.2s">
+<div class="col-md-12 bg-dark wow fadeInUp" data-wow-delay="0.1s">
+    <div class="p-5">
 
         <span class="form-check text-center"></span>
         <form method="post">
