--- a/Web/Restaurant.Web/Views/Address/AddAddress.cshtml
+++ b/Web/Restaurant.Web/Views/Address/AddAddress.cshtml
@@ -6,17 +6,17 @@
 }
 
 <partial name="_HeroPartial" />
-<div class="bg-white col-md-8 offset-md-2">
-<hr />
-<div class="col-md-10 offset-md-1">
-    <form class="row g-3" method="post">
-        <partial name="_AddressViewPartial" model="Model" />
-        <button type="submit" id="editAddressButton" class="btn btn-primary m-2"><i class="fa-solid fa-check"></i> Save changes</button>
-        <a class="btn btn-primary m-2" asp-controller="Address" asp-action="All"><i class="fa-solid fa-circle-left"></i> Back</a>
+<div class="bg-white col-md-8 offset-md-2 wow fadeInUp" data-wow-delay="0.1s">
+    <hr style="color: black; height:3px; opacity:100" />
+    <div class="col-md-10 offset-md-1">
+        <form class="row g-3" method="post">
+            <partial name="_AddressViewPartial" model="Model" />
+            <button type="submit" id="editAddressButton" class="btn btn-primary m-2"><i class="fa-solid fa-check"></i> Save changes</button>
+            <a class="btn btn-primary m-2" asp-controller="Address" asp-action="All"><i class="fa-solid fa-circle-left"></i> Back</a>
 
-    </form>
-</div>
-<hr />
+        </form>
+    </div>
+    <hr style="color: black; height:3px; opacity:100" />
 </div>
 
 
