--- a/Web/Restaurant.Web/Views/Reservation/AllReservations.cshtml
+++ b/Web/Restaurant.Web/Views/Reservation/AllReservations.cshtml
@@ -7,10 +7,10 @@
 
 <partial name="_HeroPartial" />
 
-<div class="row g-4">
+<div class="row g-4 wow fadeInUp" data-wow-delay="0.1s">
     @foreach (var reservation in Model.Reservations)
     {
-        <div class="card offset-xl-1 col-md-10 border-3 border-dark">
+        <div class="card offset-xl-1 col-md-10 border-3 border-dark wow fadeInUp" data-wow-delay="0.1s">
             <div class="row d-flex">
                 <div class="d-flex flex-column">
                     <table class="table table-borderless table-hover">
