--- a/Web/Restaurant.Web/Views/Review/AllReviews.cshtml
+++ b/Web/Restaurant.Web/Views/Review/AllReviews.cshtml
@@ -10,7 +10,7 @@
 
 <!-- To do: Improve UI - add bootstrap card class. -->
 
-<div class="row g-4 mb-3">
+<div class="row g-4 mb-3 wow fadeInUp" data-wow-delay="0.1s">
     <div class="text-center">
         <h5 class="section-title ff-secondary text-center text-primary fw-normal">Testimonial</h5>
         <h1 class="mb-5">Customer feedback</h1>
@@ -18,7 +18,7 @@
 
     @foreach (var review in Model.Reviews)
     {
-        <div class="card offset-xl-1 col-md-10 border-3 border-dark">
+        <div class="card offset-xl-1 col-md-10 border-3 border-dark wow fadeInUp" data-wow-delay="0.1s">
             <div class="row d-flex">
                 <div class="d-flex flex-column">
                     <h3 class="mt-2 mb-3">@review.FullName</h3>
