--- a/Web/Restaurant.Web/Views/Shared/Error.cshtml
+++ b/Web/Restaurant.Web/Views/Shared/Error.cshtml
@@ -1,8 +1,10 @@
+
 @model ErrorViewModel
 @{
     this.ViewData["Title"] = "Error";
 }
 
+<partial name="_HeroPartial" />
 <h1 class="text-danger">Error.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
 
