--- a/Web/Restaurant.Web/Views/Shared/_AddressViewPartial.cshtml
+++ b/Web/Restaurant.Web/Views/Shared/_AddressViewPartial.cshtml
@@ -8,6 +8,7 @@
 
 
 <div class="text-danger" asp-validation-summary="ModelOnly"></div>
+<input hidden asp-for="@Model.ApplicationUserId">
 <div class="col-md-6 ">
     <label asp-for="@Model.Name">Name</label>
     <input asp-for="@Model.Name" class="form-control bg-body">
