--- a/Web/Restaurant.Web/Views/Shared/_AddressViewPartial.cshtml
+++ b/Web/Restaurant.Web/Views/Shared/_AddressViewPartial.cshtml
@@ -7,7 +7,7 @@
 }
 
 
-<div class="text-danger" asp-validation-summary="ModelOnly"></div>
+<div class="text-danger" asp-validation-summary="All"></div>
 <input hidden asp-for="@Model.ApplicationUserId">
 <div class="col-md-6 ">
     <label asp-for="@Model.Name">Name</label>
