Added StatusCodePages middleware

--- a/Web/Restaurant.Web/Views/Shared/_OrderPartial.cshtml
+++ b/Web/Restaurant.Web/Views/Shared/_OrderPartial.cshtml
@@ -15,7 +15,7 @@
                     <table width="100%">
                         <tr>
                             <td width="75%" align="left" bgcolor="#eeeeee" style="font-size: 16px; font-weight: bold; line-height: 24px; padding: 10px;"> Order Confirmation # </td>
-                            <td width="25%" align="left" bgcolor="#eeeeee" style="font-size: 16px; font-weight: bold; line-height: 24px; padding: 10px;"> 2345678 </td>
+                            <td width="25%" align="left" bgcolor="#eeeeee" style="font-size: 16px; font-weight: bold; line-height: 24px; padding: 10px;"> @Model.OrderNumber </td>
                         </tr>
                         @foreach (var meal in Model.Meals)
                         {
