--- a/Web/Restaurant.Web/Views/Shared/StatusCodeError.cshtml
+++ b/Web/Restaurant.Web/Views/Shared/StatusCodeError.cshtml
@@ -1,11 +1,12 @@
-﻿@{
+﻿@model string;
+@{
     this.ViewData["Title"] = "Oh no!";
 }
 
 <partial name="_HeroPartial" />
 
 <div class="text-center">
-    <h1 class="text-primary">Oops...</h1>
-    <img src="~/images/not-found.jpg" style="width:600px;" />
+    <h1 class="text-primary">Oops... @Model</h1>
+    <img src="~/images/not-found.png" style="width:600px;" />
     <h3 class="fw-bold mt-3">We can't seem to find what you're looking for.</h3>
 </div>
