--- a/Web/Restaurant.Web/Areas/Administration/Views/Meal/Edit.cshtml
+++ b/Web/Restaurant.Web/Areas/Administration/Views/Meal/Edit.cshtml
@@ -16,6 +16,8 @@
     <form method="post" class="col-md-6 offset-md-3"
           enctype="multipart/form-data">
         <div asp-validation-summary="All" class="text-danger"></div>
+        <input hidden asp-for="Id" />
+
         <div class="form-group">
             <label asp-for="Name"></label>
             <input asp-for="Name" class="form-control" />
@@ -40,20 +42,17 @@
             <label asp-for="Image"></label>
             <input asp-for="Image" class="form-control" />
             <span asp-validation-for="Image" class="text-danger"></span>
-            <input hidden asp-for="Id" />
         </div>
         <div class="col-12">
             <button class="btn btn-primary w-100 col-md-12 mt-3" type="submit"><i class="fa-solid fa-check"></i>  Save changes</button>
             <a class="btn btn-primary w-100 col-md-12 mt-3" asp-action="Index" asp-route-id="@(this.TempData["RouteId"] ?? 1)"><i class="fa-solid fa-bars"></i> Back to List</a>
         </div>
     </form>
-    <form asp-action="Delete" id="deleteForm">
-        <input type="hidden" asp-for="Id" />
+    <form asp-action="Delete" asp-route-id="@Model.Id" id="deleteForm">
     </form>
     <form asp-action="Restore" asp-route-id="@Model.Id" id="restoreForm">
-        <input type="hidden" asp-for="Id" />
     </form>
-    <button class="btn btn-secondary col-md-6 offset-md-3 mt-3" asp-action="Restore" asp-route-id="@Model.Id" onclick="restoreForm.submit()"> <i class="fa-solid fa-trash-arrow-up"></i> Restore</button>
+    <button class="btn btn-secondary col-md-6 offset-md-3 mt-3" onclick="restoreForm.submit()"> <i class="fa-solid fa-trash-arrow-up"></i> Restore</button>
     <button value="Delete" class="btn btn-dark col-md-6 offset-md-3 mt-3" data-bs-toggle="modal" data-bs-target="#staticBackdrop"><i class="fa-solid fa-trash-can"></i> Delete</button>
 </div>
 
