Added Unit tests for validation attributes

--- a/Web/Restaurant.Web/Areas/Administration/Views/Order/Index.cshtml
+++ b/Web/Restaurant.Web/Areas/Administration/Views/Order/Index.cshtml
@@ -109,7 +109,7 @@
                 @order.ModifiedOn
             </td>
             <td>
-                <a class="btn btn-primary btn-sm mt-1" asp-action="Details" asp-route-id="@order.Id"><i class="fa-solid fa-circle-info"></i> Details</a>
+                <a class="btn btn-primary btn-sm mt-1" asp-action="Details" asp-route-id="@order.OrderNumber"><i class="fa-solid fa-circle-info"></i> Details</a>
             </td>
 
         </tr>
