--- a/Web/Restaurant.Web/Views/Checkout/Index.cshtml
+++ b/Web/Restaurant.Web/Views/Checkout/Index.cshtml
@@ -11,7 +11,14 @@
         <div class="col-lg-8 bg-white border border-3 border-dark rounded-3">
             <div class="mb-4">
                 <h1 class="text-center font-weight-semi-bold mb-5 mt-4">Billing Address</h1>
-                <form method="post" asp-controller="Order" asp-action="Create" id="CreateOrderForm">
+                @if (!Model.Addresses.Any())
+                {
+                    <h3 class="mt-3 text-center">I'm afraid you don't have any addresses added yet.</h3>
+                    <h3 class="mt-3 text-center">You'll need to <a asp-controller="Address" asp-action="Add">add an address</a> in order to proceed.</h3>
+                }
+                else
+                {
+                    <form method="post" asp-controller="Order" asp-action="Create" id="CreateOrderForm">
                     <div asp-validation-summary="All"></div>
                     <div class="col-md-12">
                         <input type="hidden" id="cartId" name="CartId" value="@Model.Id" />
@@ -74,6 +81,7 @@
                         </div>
                     </div>
                 </form>
+                }
             </div>
         </div>
 
