Fixed a bug in administration controllers validation

--- a/Web/Restaurant.Web/Areas/Administration/Views/Meal/Details.cshtml
+++ b/Web/Restaurant.Web/Areas/Administration/Views/Meal/Details.cshtml
@@ -9,6 +9,7 @@
 
 <div>
     <div>
+        <div asp-validation-summary=All></div>
         <h4>Meal id: @Model.Id</h4>
         <hr />
         <dl class="row">
