--- a/Web/Restaurant.Web/Areas/Administration/Views/Reservation/Details.cshtml
+++ b/Web/Restaurant.Web/Areas/Administration/Views/Reservation/Details.cshtml
@@ -8,6 +8,7 @@
 <partial name="_HeroPartial" />
 <div>
     <div>
+        <div asp-validation-summary=All></div>
         <h4>Reservation №@Model.Id</h4>
         <hr />
         <dl class="row">
