--- a/Web/Restaurant.Web/Areas/Administration/Views/Reservation/Edit.cshtml
+++ b/Web/Restaurant.Web/Areas/Administration/Views/Reservation/Edit.cshtml
@@ -62,10 +62,10 @@
     <form asp-action="Delete" id="deleteForm">
         <input type="hidden" asp-for="Id" />
     </form>
-    <form asp-action="Restore" asp-route-id="@Model.Id" id="restoreForm">
+    <form asp-action="Restore" id="restoreForm">
         <input type="hidden" asp-for="Id" />
     </form>
-    <button class="btn btn-secondary col-md-6 offset-md-3 mt-3" asp-action="Restore" asp-route-id="@Model.Id" onclick="restoreForm.submit()"><i class="fa-solid fa-trash-arrow-up"></i> Restore</button>
+    <button class="btn btn-secondary col-md-6 offset-md-3 mt-3" onclick="restoreForm.submit()"><i class="fa-solid fa-trash-arrow-up"></i> Restore</button>
     <button value="Delete" class="btn btn-dark col-md-6 offset-md-3 mt-3" data-bs-toggle="modal" data-bs-target="#staticBackdrop"><i class="fa-solid fa-trash-can"></i> Delete</button>
 
 </div>
