Bug fixes + deployed app and db to azure
Fixed meal quantity validation in Cart, order number validation attribute now checks if user is admin. Added display attribute to viewmodel properties. started work on Address service tests.

--- a/Web/Restaurant.Web/Views/Cart/Index.cshtml
+++ b/Web/Restaurant.Web/Views/Cart/Index.cshtml
@@ -111,9 +111,17 @@
 
             quantity++;
 
+            if(quantity <= 100){
+                cartItemContainer.querySelector('input').setAttribute('value', quantity);
+            }
         }
         else {
+
             quantity--;
+
+            if(quantity >= 1){
+                cartItemContainer.querySelector('input').setAttribute('value', quantity);
+            }
         }
 
         const data =
@@ -130,7 +138,6 @@
             success: function (result, status, xhr) {
                 if (xhr.status === 200) {
                     var jsonResult = JSON.parse(xhr.responseText);
-                    cartItemContainer.querySelector('input').setAttribute('value', jsonResult.quantity);
                     $("#cartSubTotalBtn").html('<i class="fa-solid fa-cart-shopping"></i> ' + jsonResult.cartSubTotal + ' $');
                     $("#cartSubTotalCard").html(jsonResult.cartSubTotal + ' $');
                     $("#cartItemTotalPrice" + mealId).html(jsonResult.itemTotalPrice + ' $');
