--- a/Web/Restaurant.Web/Views/Menu/AllMeals.cshtml
+++ b/Web/Restaurant.Web/Views/Menu/AllMeals.cshtml
@@ -13,7 +13,9 @@
             <h1 class="mb-5">You can choose from our</h1>
         </div>
 
-        @{var i = 1;}
+        @{
+            var i = 1;
+        }
 
         <div class="tab-class text-center wow fadeInUp" data-wow-delay="0.1s">
             <ul class="nav nav-pills d-inline-flex justify-content-center border-bottom mb-5">
@@ -32,7 +34,9 @@
                 }
             </ul>
 
-            @{i = 1;}
+            @{
+                i = 1;
+            }
 
             <div class="tab-content">
 
@@ -52,21 +56,23 @@
                                             </h5>
                                             <small class="fst-italic mb-2">@meal.Description</small>
                                             <div class="d-flex align-items-center">
-                                                <div class="input-group quantity me-md-5" style="width: 100px;">
+                                                <div class="btn-group quantity me-md-5" style="width: 100px;">
                                                     <div>
                                                         <button class="btn btn-sm btn-primary btn-minus" onclick="ChangeQuantity('mealContainer@(meal.Id)')">
                                                             <i class="fa fa-minus btn-minus"></i>
                                                         </button>
                                                     </div>
-                                                    <input class="form-control form-control-sm bg-white text-center" value="1" disabled>
+                                                    <input class="form-control form-control-sm bg-white text-center" style="min-width:25px;" value="1" disabled>
                                                     <div>
                                                         <button class="btn btn-sm btn-primary btn-plus" onclick="ChangeQuantity('mealContainer@(meal.Id)')">
                                                             <i class="fa fa-plus btn-plus"></i>
                                                         </button>
                                                     </div>
-                                                </div>
 
-                                                <button class="btn btn-primary px-3 ms-5" onclick="AddToCart('mealContainer@(meal.Id)')"><i class="fa fa-shopping-cart"></i> Add To Cart</button>
+
+                                                </div>
+                                                <button class="btn btn-primary px-md-3 ms-md-5" onclick="AddToCart('mealContainer@(meal.Id)')"><i class="fa fa-shopping-cart"></i> Add To Cart</button>
+
                                             </div>
                                         </div>
                                     </div>
